# mock-interview

./: .gitignore  README.md
client/javascript/src/: app.js
client/react/: package-lock.json  package.json  tsconfig.json
client/react/src/app/: page.tsx
client/react/src/app/interview/: page.tsx
client/react/src/components/: ConnectButton.tsx
server/: Dockerfile  README.md  bot-gemini-tavus.py  bot-gemini.py  bot.py  bot_gemini.py  env.example  pdf_helper.py  prompt_helper.py  pyproject.toml  run_bot_gemini.py  server.py  server_modal.py  ta_helper.py
