[project]
name = "simple-chatbot"
version = "0.1.0"
description = "Simple chatbot built with Pipecat"
requires-python = ">=3.10"
dependencies = [
    "mysql-connector-python>=9.6.0",
    "pipecat-ai[daily,deepgram,elevenlabs,google,local-smart-turn-v3,openai,runner,silero,webrtc]",
    "pipecatcloud",
    "pypdf>=6.5.0",
]

[dependency-groups]
dev = [
    "pyright>=1.1.404,<2",
    "ruff>=0.12.11,<1",
]

[tool.ruff]
line-length = 100
[tool.ruff.lint]
select = ["I"]
